Add: get request by id, authorized institutions to charge in cards and fixes
