# source/controllers/client_request_controller.js
@@ -10,6 +10,8 @@ const { Update_Data_Request } = require("../models/update_data_request");
 const { Op } = require('sequelize');
 const { Card } = require("../models/card");
 const { Person } = require("../models/person");
+const { print_request_type, get_credit_score } = require("./utilities_controller");
+const { request } = require("express");
 
 /**
  * @description Method that creates a update data request
@@ -26,7 +28,7 @@ const create_update_data_request = (req, res) => {
             res.status(401).json({information_message: 'El token de sesion ha expirado, inicie sesión nuevamente.'});
         }else{
             Bank_User.findOne({where: {username: session.username}, raw: true }).then(bank_user=>{
-                Request.create({ request_type: 'Actualizacion de datos', date: new Date(Date.now()), verified: false}).then(new_request =>{
+                Request.create({ request_type: 1, date: new Date(Date.now()), verified: false}).then(new_request =>{
                     if(new_request != null){
                         Update_Data_Request.create({
                             id_request: new_request.id_request,
@@ -60,7 +62,7 @@ const create_card_cancellation_request = (req, res) => {
             Bank_User.findOne({where: {username: session.username}, raw: true }).then(bank_user=>{
                 Card.findOne({where: {id_card: req.body.id_card}, raw: true}).then(card=>{
                     if(card.cui == bank_user.cui){
-                        Request.create({ request_type: 'Cancelacion de tarjeta', date: new Date(Date.now()), verified: false}).then(new_request =>{
+                        Request.create({ request_type: 2, date: new Date(Date.now()), verified: false}).then(new_request =>{
                             if(new_request != null){
                                 Card_Cancellation_Request.create({
                                     id_request: new_request.id_request,
@@ -93,7 +95,7 @@ const create_credit_card_request = (req, res) => {
             res.status(401).json({information_message: 'El token de sesion ha expirado, inicie sesión nuevamente.'});
         }else{
             Bank_User.findOne({where: {username: session.username}, raw: true }).then(bank_user=>{
-                Request.create({ request_type: 'Tarjeta de credito', date: new Date(Date.now()), verified: false}).then(new_request =>{
+                Request.create({ request_type: 3, date: new Date(Date.now()), verified: false}).then(new_request =>{
                     if(new_request != null){
                         Credit_Card_Request.create({
                             id_request: new_request.id_request,
@@ -121,7 +123,7 @@ const create_debit_card_request = (req, res) => {
             res.status(401).json({information_message: 'El token de sesion ha expirado, inicie sesión nuevamente.'});
         }else{
             Bank_User.findOne({where: {username: session.username}, raw: true }).then(bank_user=>{
-                Request.create({ request_type: 'Tarjeta de debito', date: new Date(Date.now()), verified: false}).then(new_request =>{
+                Request.create({ request_type: 4, date: new Date(Date.now()), verified: false}).then(new_request =>{
                     if(new_request != null){
                         Debit_Card_Request.create({
                             id_request: new_request.id_request,
@@ -158,7 +160,7 @@ const create_loan_request = (req, res) => {
                         if(bank_user.cui == guarantor.cui){
                             res.status(403).json({information_message: 'No puede ser el solcitante y el fiador a la vez.'})
                         }else{
-                            Request.create({ request_type: 'Prestamo', date: new Date(Date.now()), verified: false}).then(new_request =>{
+                            Request.create({ request_type: 5, date: new Date(Date.now()), verified: false}).then(new_request =>{
                                 if(new_request != null){
                                     Loan_Request.create({
                                         id_request: new_request.id_request,
@@ -192,7 +194,7 @@ const create_account_request = (req, res) => {
             res.status(401).json({information_message: 'El token de sesion ha expirado, inicie sesión nuevamente.'});
         }else{
             Bank_User.findOne({where: {username: session.username}, raw: true }).then(bank_user=>{
-                Request.create({ request_type: 'Cuenta', date: new Date(Date.now()), verified: false}).then(new_request =>{
+                Request.create({ request_type: 6, date: new Date(Date.now()), verified: false}).then(new_request =>{
                     if(new_request != null){
                         Account_Request.create({
                             id_request: new_request.id_request,
@@ -219,7 +221,11 @@ const get_all_request = (req, res) =>{
             res.status(401).json({information_message: 'El token de sesion ha expirado, inicie sesión nuevamente.'});
         }else{
             Request.findAll({where: {verified: false}, raw: true, order: [['date', 'ASC']]}).then(requests => {
-                res.status(200).json(requests);
+                var result = [];
+                requests.forEach(request=>{
+                    result.push({id_request:request.id_request, request_type: print_request_type(request.request_type), date: request.date, verified: request.verified});
+                })
+                res.status(200).json(result);
             });
         }
     });
@@ -234,8 +240,6 @@ const get_request_between_two_dates = (req, res) =>{
         if(session == null){
             res.status(401).json({information_message: 'El token de sesion ha expirado, inicie sesión nuevamente.'});
         }else{
-            console.log("Fecha inicial: "+req.body.initial_date);
-            console.log("Fecha Final: "+req.body.final_date);
             Request.findAll({
                 where:{
                     date: {
@@ -246,10 +250,103 @@ const get_request_between_two_dates = (req, res) =>{
                 },
                 order: [['date', 'ASC']]
             }).then(requests => {
-                res.status(200).json(requests);
+                var result = [];
+                requests.forEach(request=>{
+                    result.push({id_request:request.id_request, request_type: print_request_type(request.request_type), date: request.date, verified: request.verified});
+                })
+                res.status(200).json(result);
             });
         }
     });
+};
+
+const get_request_by_id = (req, res) =>{
+    Active_Session_Log.findOne({where: {token: req.headers.token}, raw: true}).then(session =>{
+        if(session == null){
+            res.status(401).json({information_message: 'Token de sesion ha expirado, inicie sesion nuevamente'});
+        }else{
+            Bank_User.findOne({where: {username: session.username}, raw: true}).then(bank_user=>{
+                if(bank_user.user_type > 2){
+                    Request.findOne({where:{id_request: req.body.id_request}, raw: true}).then(request=>{
+                        var request_data_promise, credit_score_promise=null;
+                        switch(request.request_type){
+                            case 1:{
+                                request_data_promise = Update_Data_Request.findOne({where:{id_request: request.id_request}, raw: true});
+                                break;
+                            }
+                            case 2:{
+                                request_data_promise = Card_Cancellation_Request.findOne({where:{id_request: request.id_request}, raw: true});
+                                break;
+                            }
+                            case 3:{
+                                request_data_promise = Credit_Card_Request.findOne({where:{id_request: request.id_request}, raw: true});
+                                credit_score_promise = get_credit_score(0);
+                                break;
+                            }
+                            case 4:{
+                                request_data_promise = Debit_Card_Request.findOne({where:{id_request: request.id_request}, raw: true});
+                                break;
+                            }
+                            case 5:{
+                                request_data_promise = Loan_Request.findOne({where:{id_request: request.id_request}, raw: true});
+                                credit_score_promise = get_credit_score(0);
+                                break;
+                            }
+                            case 6:{
+                                request_data_promise = Account_Request.findOne({where:{id_request: request.id_request}, raw: true});
+                                break;
+                            }
+                            default:{
+                                res.status(500).json({information_message: 'Tipo de solicitud sin identificar.'});
+                                break;
+                            }
+                        }
+                        request_data_promise.then(data=>{
+                            if(credit_score_promise != null){
+                                credit_score_promise.then(credit_score=>{
+                                    res.status(200).json({
+                                        id_request: request.id_request,
+                                        request_type: print_request_type(request.request_type),
+                                        credit_score: credit_score,
+                                        request_data: data
+                                    });
+                                });
+                            }else{
+                                res.status(200).json({
+                                    id_request: request.id_request,
+                                    request_type: print_request_type(request.request_type),
+                                    request_data: data
+                                });
+                            }
+                        });
+                    });
+                }else{
+                    res.status(403).json({information_message:'No posee permisos para acceder a esta información.'});
+                }
+            });
+        }
+    })
+};
+
+const deny_request = (req, res) =>{
+    Active_Session_Log.findOne({where:{token: req.headers.token}, raw: true}).then(session=>{
+        if(session == null){
+            res.status(401).json({information_message: 'Token de sesion ha expirado, inicie sesion nuevamente'});
+        }else{
+            Bank_User.findOne({where: {username: session.username}, raw: true}).then(bank_user=>{
+                if(bank_user.user_type > 2){
+                    Request.findOne({where: {id_request: req.body.id_request}}).then(request=>{
+                        request.update({verified: true});
+                    }).then(()=>{
+                        send_denying_email(request);
+                        res.status(200).json({information_message: 'Se ha rechazado la solicitud exitosamente'});
+                    });
+                }else{
+                    res.status(403).json({information_message: 'No posee permisos para realizar esta ación'});
+                }
+            })
+        }
+    })
 };
 
 module.exports = {
@@ -260,5 +357,7 @@ module.exports = {
     create_update_data_request,
     create_loan_request,
     get_all_request,
-    get_request_between_two_dates
+    get_request_between_two_dates,
+    get_request_by_id,
+    deny_request
 }
